# OpenCvCpp

./: .gitignore  README.md  compileCode.sh  howToRun.md  links.txt  setup.md
cppProject/: CMakeLists.txt  adb_script.cpp  adb_script1.cpp  adb_script2.cpp  createVideoFromSS.cpp  playVideo.cpp  recordCamera.cpp  screenshot  screenshot.cpp  ssForLoop  ssForLoop.cpp  takeSS.cpp  tutorial.cpp  tutorial3.cpp
fileTemplates/: compileCode.sh  tutorial.cpp
